--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+- 1.1.2 (24-dec-2022)
+ - PC: added AppImage PC client version for amd64
+ - PC: added Launch4j wraqpped PC client version (without embedded JDK)
+ - PC: embedded JDK updated to 19.0.1+11
+ - PC: updated GoSDK for launcher to 1.19.4
+
 - 1.1.1 (20-sep-2022)
  - PC: windows launcher moved from i386 to amd64 to prevent antivirus false positive detection
  - PC: embedded JDK updated to 17.0.4.1+1
