--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 - 1.1.3 (SNAPSHOT)
- - PC: updated Launch4j to 2.5.0
- - PC: embedded JDK updated to 23+38
- - PC: updated GoSDK for launcher to 1.23.1
+ - PC: updated Launch4j to 2.6.0
+ - PC: embedded JDK updated to 24.0.1+11
+ - PC: GoSDK wrapper replaced new version
 
 - 1.1.2 (24-dec-2022)
  - PC: added AppImage PC client version for amd64
